--- a/style.css
+++ b/style.css
@@ -14,8 +14,22 @@ body {
 .nav-bar-desktop,
 .main-logo,
 .header-button-1,
-.see-whole-program {
+.see-whole-program,
+.footer-1,
+.partner-image-template {
   display: none;
+}
+
+.image-partner-mob {
+  display: block;
+  width: 100%;
+  height: 26vh;
+  margin: auto;
+}
+
+.partner-image-set2 {
+  width: 100%;
+  height: 100%;
 }
 
 header {
@@ -72,7 +86,7 @@ header {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   padding-top: 20px;
-  margin: 20px auto auto auto;
+  margin: auto;
 }
 
 .course-modules-mobile {
@@ -189,6 +203,12 @@ h1,
   padding: 10px 10px;
 }
 
+.announcement-mobile-1 {
+  height: 20vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
 .announcement-mobile-2 h4 {
   margin-top: -0.25vh;
 }
@@ -230,9 +250,16 @@ h1,
 
 .blurr-img img {
   filter: sepia();
+  width: 100%;
+  height: 100%;
 }
 
-footer {
+.projects {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-1 {
   min-height: 100px;
 }
 
@@ -296,7 +323,8 @@ footer {
   #hamburger,
   .join-class-button,
   .trainer-details,
-  .no-display-text {
+  .no-display-text,
+  .image-partner-mob {
     display: none;
   }
 
@@ -305,7 +333,8 @@ footer {
   .black-head,
   .main-head-container,
   .nav-bar-desktop,
-  .main-logo {
+  .main-logo,
+  .partner-image-template  {
     display: block;
   }
 
@@ -452,7 +481,28 @@ footer {
   .blurr-img {
     margin: auto;
     width: 75%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
+  }
+
+  .projects {
+    display: grid;
+  }
+
+  .partner-image-template {
+    width: 100%;
+    height: 45vh;
+    margin: auto;
+  }
+
+  .partner-image-set {
+    width: 99%;
+    height: 99%;
+  }
+
+  .about-footer {
+    background-color: #272a31;
+    color: #fff;
   }
 }
