--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ h1,
 .orange-bar-mobile {
   display: block;
   margin: 5px auto;
-  width: 10vw;
+  width: 5vw;
   height: 3px;
   background: #ec5242;
 }
@@ -334,7 +334,7 @@ h1,
   .main-head-container,
   .nav-bar-desktop,
   .main-logo,
-  .partner-image-template  {
+  .partner-image-template {
     display: block;
   }
 
@@ -343,8 +343,7 @@ h1,
     display: flex;
     flex-direction: column;
     min-height: 100px;
-    height: 120px;
-    border: 1px dashed red;
+    border-bottom: 1px #f5f5f5 solid;
   }
 
   .black-head {
@@ -380,6 +379,10 @@ h1,
     justify-content: space-between;
   }
 
+  .main-logo-body {
+    margin-top: 10px;
+  }
+
   .header-button-1 {
     display: block;
     width: 170px;
@@ -387,7 +390,7 @@ h1,
     border: 5px solid #ec5242;
     background-color: #fff;
     color: #ec5242;
-    margin-top: 10px;
+    margin-top: 12px;
   }
 
   .nav-bar-desktop ul {
@@ -403,17 +406,17 @@ h1,
   /* showcase-desktop */
 
   .showcase-mobile {
-    background-image: url(./images/head-mobile-background.jpg);
-    background-size: 100% 100%;
+    background-image: url(./images/header.png);
     background-repeat: no-repeat;
     width: 100%;
     height: auto;
-    margin-top: 1vh;
+    margin-top: 3vh;
   }
 
   .container-mobile {
     width: 80%;
     height: auto;
+    padding-top: 45px;
   }
 
   .second-heading {
