--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ h1,
     background-image: none;
     display: flex;
     flex-direction: column;
-    min-height: 100px;
+    height: 100px;
     border-bottom: 1px #f5f5f5 solid;
   }
 
@@ -384,7 +384,6 @@ h1,
     background-color: #272a31;
     width: 100%;
     height: 35px;
-    margin: auto;
   }
 
   .black-head ul {
@@ -526,6 +525,8 @@ h1,
 
   .start-date-1 {
     margin-top: -20px;
+    font-size: 40px;
+    font-weight: 900;
   }
 
   .location-1 {
@@ -640,6 +641,16 @@ h1,
   }
 }
 
-.drop-down-image-list {
-  display: none;
+.name {
+  margin-bottom: -0.25vh;
 }
+
+.grey-line {
+  width: 20px;
+  height: 1px;
+  background-color: #69738b;
+}
+
+/* .drop-down-image-list {
+  display: none;
+} */
